[gd_scene load_steps=4 format=3 uid="uid://i5ke8rixjno1"]

[ext_resource type="PackedScene" uid="uid://bp2r16k545otu" path="res://scenes/window/window.tscn" id="1_af0a6"]
[ext_resource type="Script" uid="uid://1vlp02y8wko2" path="res://scripts/window_mail.gd" id="2_yye0s"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yye0s"]

[node name="Window" instance=ExtResource("1_af0a6")]
offset_right = 525.0
offset_bottom = 457.0
script = ExtResource("2_yye0s")

[node name="Title" parent="HBoxContainer/TitleBar/MarginContainer/CenterContainer" index="0"]
text = "Mail"

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Body" index="0"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8

[node name="List" type="VBoxContainer" parent="HBoxContainer/Body/MarginContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/Body/MarginContainer/List" index="0"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Body/MarginContainer/List/HBoxContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Subject"

[node name="Label2" type="Label" parent="HBoxContainer/Body/MarginContainer/List/HBoxContainer" index="1"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "From"

[node name="Content" type="PanelContainer" parent="HBoxContainer/Body" index="1"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yye0s")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Body/Content" index="0"]
layout_mode = 2

[node name="BackButton" type="Button" parent="HBoxContainer/Body/Content/VBoxContainer" index="0"]
layout_mode = 2
text = "< Return"

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Body/Content/VBoxContainer" index="1"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8

[node name="BodyText" type="RichTextLabel" parent="HBoxContainer/Body/Content/VBoxContainer/MarginContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Body text Body text Body text Body text Body text Body text Body text Body text Body text Body text Body text Body text Body text Body text Body text Body text Body text Body text Body text "
fit_content = true

[connection signal="pressed" from="HBoxContainer/Body/Content/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="meta_clicked" from="HBoxContainer/Body/Content/VBoxContainer/MarginContainer/BodyText" to="." method="_on_body_text_meta_clicked"]
